test/should-fail/vsgc1863.f3
/**
 * Should-fail test VSGC-1863 : Check for multiple run functions
 *
 * @test/compile-error
 */

function run() {
}

function run() {
}
